--- a/lojinhaLegal2.0/appsettings.json
+++ b/lojinhaLegal2.0/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "MinhaConexao": "Server=praticaeinovacao.dev.br;Database=aulaPoo;User Id=praticae_grupo3;Password=@Poo2024;"
+  }
 }
