--- a/lojinhaLegal2.0/lojinhaLegal2.0.csproj
+++ b/lojinhaLegal2.0/lojinhaLegal2.0.csproj
@@ -7,4 +7,11 @@
     <RootNamespace>lojinhaLegal2._0</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="MySql.Data" Version="9.0.0" />
+    <PackageReference Include="MySqlConnector" Version="2.3.7" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
