build: configurado banco de dados no program.cs para o datacontext do produto entity

--- a/lojinhaLegal2.0/appsettings.json
+++ b/lojinhaLegal2.0/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MinhaConexao": "Server=praticaeinovacao.dev.br;Database=aulaPoo;User Id=praticae_grupo3;Password=@Poo2024;"
+    "defaultConnection": "Server=praticaeinovacao.dev.br;Database=aulaPoo;User Id=praticae_grupo3;Password=@Poo2024;"
   }
 }
