program.cs e data adicionados

--- a/lojinhaLegal2.0/appsettings.json
+++ b/lojinhaLegal2.0/appsettings.json
@@ -1,4 +1,8 @@
+
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=praticaeinovacao.dev.br;port=3306;database=loja;user=praticae_grupo3;password=@Poo2024;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
