--- a/lojinhaLegal2.0/lojinhaLegal2.0.csproj
+++ b/lojinhaLegal2.0/lojinhaLegal2.0.csproj
@@ -7,4 +7,19 @@
     <RootNamespace>lojinhaLegal2._0</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="wwwroot\Data\AppDbContext.cs" />
+    <Compile Include="wwwroot\Data\Produto.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
