migration criada e database atualizada vazia, falta popular dados

--- a/lojinhaLegal2.0/appsettings.json
+++ b/lojinhaLegal2.0/appsettings.json
@@ -1,7 +1,7 @@
 
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=praticaeinovacao.dev.br;port=3306;database=loja;user=praticae_grupo3;password=@Poo2024;"
+    "DefaultConnection": "server=praticaeinovacao.dev.br;port=3306;database=praticae_grupo3;user=praticae_grupo3;password=@Poo2024;"
   },
   "Logging": {
     "LogLevel": {
