--- a/LojinhaLegalV3/LojinhaLegalV3.csproj
+++ b/LojinhaLegalV3/LojinhaLegalV3.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>lojinhaLegal2._0</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="wwwroot\Data\AppDbContext.cs" />
-    <Compile Include="wwwroot\Data\Produto.cs" />
+    <Content Include="Data\AppDbContext.cs" />
+    <Content Include="Data\Produto.cs" />
+    <Content Include="Data\SeedData.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,8 +19,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
